[gd_scene load_steps=4 format=3 uid="uid://cxpebucwjn4av"]

[ext_resource type="Theme" uid="uid://dec7irkhj5hdn" path="res://scenes/menus/theme.tres" id="1_0akvs"]
[ext_resource type="Script" path="res://scripts/animals/dog_commands_control.gd" id="2_h0fjm"]
[ext_resource type="Script" path="res://scripts/menus/visibility_input_handler.gd" id="3_w1mpr"]

[node name="DogCommandsControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0akvs")
script = ExtResource("2_h0fjm")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
vertical = true

[node name="SitButton" type="Button" parent="MarginContainer/BoxContainer"]
layout_mode = 2
text = "Sit
"

[node name="FollowButton" type="Button" parent="MarginContainer/BoxContainer"]
layout_mode = 2
text = "Follow"

[node name="FreeButton" type="Button" parent="MarginContainer/BoxContainer"]
layout_mode = 2
text = "Free"

[node name="VisibilityInputHandler" type="Node" parent="."]
script = ExtResource("3_w1mpr")

[connection signal="pressed" from="MarginContainer/BoxContainer/SitButton" to="." method="_on_sit_button_pressed"]
[connection signal="pressed" from="MarginContainer/BoxContainer/FollowButton" to="." method="_on_follow_button_pressed"]
[connection signal="pressed" from="MarginContainer/BoxContainer/FreeButton" to="." method="_on_free_button_pressed"]
